make user can specify exported port number by environment variables

--- a/docker-compose.server-only.yml
+++ b/docker-compose.server-only.yml
@@ -11,6 +11,8 @@ services:
             CHANHIVE_DB_PORT: 3306
         volumes:
             - ./chanhiverc.json:/home/node/chanhiverc.json
+        ports:
+            - ${PORT?Variable not set}:9000
 
     mysql:
         image: mysql:8
