add api server environment variables

--- a/docker-compose.swarm.yml
+++ b/docker-compose.swarm.yml
@@ -4,6 +4,10 @@ services:
     web-app:
         image: chanhive/web-app:latest
         restart: always
+        environment:
+            API_ENTRYPOINT: http://server:9000/graphql
+            NEXT_PUBLIC_GRAPHQL_URI: https://${SERVER_URL?Variable not set}/graphql
+            NEXT_PUBLIC_WS_GRAPHQL_URI: wss://${SERVER_URL?Variable not set}/graphql
         networks:
             - net
             - traefik-public
